Added grunt task
But there's a lot to discuss regarding the file structure

--- a/demo/type-demo.html
+++ b/demo/type-demo.html
@@ -12,8 +12,8 @@
     <meta name="format-detection" content="telephone=no" />
     <title>Type.css 中文排版</title>
     <link rel="stylesheet" href="http://g.tbcdn.cn/thx/cube/1.0.3/neat.css">
-    <link rel="stylesheet" href="type.css">
-    <link rel="stylesheet" href="demo.css">
+    <link rel="stylesheet" href="../type.css">
+    <link rel="stylesheet" href="type-demo.css">
 </head>
 
 <body>
@@ -157,7 +157,7 @@
                         </blockquote>
                 <div class="column">
                     <h2 id="lists">列表</h2>
-                    <div class="col3"> 
+                    <div class="col3">
                         <h3 id="ordered-list">有序列表 ordered-list</h3>
                         <ol>
                             <li>列表项</li>
@@ -178,7 +178,7 @@
                         </ol>
                     </div>
 
-                    <div class="col3"> 
+                    <div class="col3">
                         <h3 id="unordered-list">无序列表 unordered-list</h3>
                         <ul>
                             <li>列表项 01</li>
@@ -200,7 +200,7 @@
                         </ul>
                     </div>
 
-                    <div class="col3"> 
+                    <div class="col3">
                         <h3 id="definition-list">定义列表 definition</h3>
                         <dl>
                             <dt>Definition 列表 标题</dt>
@@ -315,7 +315,7 @@
                             <li>&lt;address&gt;<address>contact information</address></li>
                             <li>&lt;pre&gt;<pre>预格式化标签 preformatted text</pre></li>
                         </ul>
-                                            
+
                     </div>
                     </div>
             </div>
