--- a/index.html
+++ b/index.html
@@ -1,74 +1,10 @@
-<!doctype html>
-<html>
+---
+layout: default
+---
 
-<head>
-  <meta charset=utf-8 />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <!-- 优先使用IE最新版本和 Chrome -->
-  <meta name="viewport" content="initial-scale=1, maximum-scale=2, minimum-scale=1">
-  <meta name="apple-mobile-web-app-title" content="Cube">
-  <meta name="apple-mobile-web-app-capable" content="yes" />
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-  <meta name="format-detection" content="telephone=no" />
-  <title>Cube 样式解决方案</title>
-  <link rel="stylesheet" type="text/css" href="src/neat.css">
-  <link rel="stylesheet" type="text/css" href="src/type.css">
-  <link rel="stylesheet" type="text/css" href="src/layout.css">
-  <link rel="stylesheet" type="text/css" href="src/iconfont.css">
-  <link rel="stylesheet" type="text/css" href="src/utils.css">
-  <link rel="stylesheet" type="text/css" href="assets/style.css">
-</head>
-
-<body>
-  <div id="header">
-    <div class="navbar">
-      <div class="container">
-        <h1 class="logo">
-          <a href="index.html">Cube</a>
-        </h1>
-        <ul class="nav">
-          <li>
-            <a href="#!demo/type/">
-              Type.css 演示 <i class="dot"></i>
-            </a>
-          </li>
-          <li>
-            <a href="#!doc">
-              文档 <i class="dot"></i>
-            </a>
-          </li>
-          <li>
-            <a href="https://github.com/thx/cube">
-              Github
-              <i class="dot"></i>
-            </a>
-          </li>
-        </ul>
-      </div>
-    </div>
+<div id="main">
+  <div id="sidebar"></div>
+  <div id="content" class="type">
+    <h2>TODO</h2>
   </div>
-
-  <div id="page">
-    <div id="main">
-      <div id="sidebar"></div>
-      <div id="content" class="type">
-      </div>
-    </div>
-  </div>
-
-  <div id="footer" class="">
-    <p>
-      <small>
-        Copyright © 2013，<a href="http://thx.github.io" target="_blank">THX</a>
-      </small>
-    </p>
-    <p>
-      基于<a href="http://zh.wikipedia.org/wiki/MIT_License">MIT License</a>开源协议
-    </p>
-  </div>
-
-  <script src="http://g.tbcdn.cn/kissy/k/1.4.0/seed-min.js"></script>
-  <script src="assets/demo.js"></script>
-</body>
-
-</html>
+</div>
