--- a/demo/_posts/2013-12-17-type.html
+++ b/demo/_posts/2013-12-17-type.html
@@ -180,6 +180,22 @@ title: Type.css 演示
   </figure>
   <h3 id="u">专名号</h3>
   <p>专名号，又称私名号，用于标明人名、地名、朝代名、种族名、国名、机构名等，中文横排时下划线在底部，竖排时则在左边。相邻的专名之间应该有空隙。例如：<u>万里长城</u>位于<u>中国</u><u>北京</u>。</p>
+
+  <h3>快捷键 &lt;kbd&gt;</h3>
+
+  <p>顾名思义，kbd 是 Keybord（键盘）的缩写，用来表示所包含的文本是从键盘上键入的。HTML5 中扩展了它的语义，也包含其他输入方式，比如「语音命令」。</p>
+
+  <p>在 Chrome（Windows） 中可以使用 <kbd>Ctrl</kbd>+<kbd>N</kbd> 打开新窗口，Mac 中使用 <kbd class="dark">Command</kbd>+<kbd class="dark">N</kbd>。</p>
+
+  <p><kbd>`</kbd><kbd>1</kbd><kbd>2</kbd><kbd>3</kbd><kbd>4</kbd><kbd>5</kbd><kbd>6</kbd><kbd>7</kbd><kbd>8</kbd><kbd>9</kbd><kbd>0</kbd><kbd>-</kbd><kbd>=</kbd><kbd>Bkspc</kbd></p>
+
+  <p><kbd>Tab</kbd><kbd>q</kbd><kbd>w</kbd><kbd>e</kbd><kbd>r</kbd><kbd>t</kbd><kbd>y</kbd><kbd>u</kbd><kbd>i</kbd><kbd>o</kbd><kbd>p</kbd><kbd>[</kbd><kbd>]</kbd><kbd>\</kbd></p>
+
+  <p><kbd>Caps Lock</kbd><kbd>a</kbd><kbd>s</kbd><kbd>d</kbd><kbd>f</kbd><kbd>g</kbd><kbd>h</kbd><kbd>j</kbd><kbd>k</kbd><kbd>l</kbd><kbd>;</kbd><kbd>'</kbd><kbd>Enter</kbd></p>
+
+  <p><kbd>Shift</kbd><kbd>z</kbd><kbd>x</kbd><kbd>c</kbd><kbd>v</kbd><kbd>b</kbd><kbd>n</kbd><kbd>m</kbd><kbd>,</kbd><kbd>.</kbd><kbd>/</kbd><kbd>Shift</kbd></p>
+
+
   <h3>其他标签</h3>
   <ul>
     <li>&lt;abbr&gt;缩写<abbr title="title">abbreviation</abbr></li>
@@ -190,7 +206,6 @@ title: Type.css 演示
     <li>&lt;dfn&gt;<dfn title="title">defining instance</dfn></li>
     <li>&lt;i&gt;<i>italic 仅保留一个斜体标签</i></li>
     <li>&lt;ins&gt;<ins>inserted text</ins></li>
-    <li>&lt;kbd&gt;<kbd>user input</kbd></li>
     <li>&lt;mark&gt;<mark>标记 marked (highlighted) text</mark></li>
     <li>&lt;em&gt;<em>emphatic stress</em></li>
     <li>&lt;samp&gt;<samp>sample output</samp></li>
