--- a/demo/_posts/2013-12-17-type.html
+++ b/demo/_posts/2013-12-17-type.html
@@ -1,4 +1,13 @@
----
+<!DOCTYPE html>
+<html lang="zh-cn">
+<head>
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <link rel="stylesheet" href="../../src/type.css">
+
+</head>
+<body class="type">
+  ---
 layout: post
 title: Type.css 演示
 ---
@@ -185,16 +194,93 @@ title: Type.css 演示
 
   <p>顾名思义，kbd 是 Keybord（键盘）的缩写，用来表示所包含的文本是从键盘上键入的。HTML5 中扩展了它的语义，也包含其他输入方式，比如「语音命令」。</p>
 
-  <p>在 Chrome（Windows） 中可以使用 <kbd>Ctrl</kbd>+<kbd>N</kbd> 打开新窗口，Mac 中使用 <kbd class="dark">Command</kbd>+<kbd class="dark">N</kbd>。</p>
+  <h4>显示 Mac 特殊键位符号</h4>
 
-  <p><kbd>`</kbd><kbd>1</kbd><kbd>2</kbd><kbd>3</kbd><kbd>4</kbd><kbd>5</kbd><kbd>6</kbd><kbd>7</kbd><kbd>8</kbd><kbd>9</kbd><kbd>0</kbd><kbd>-</kbd><kbd>=</kbd><kbd>Bkspc</kbd></p>
+  Mac 中的修饰键等通常使用符号表示，使用自定义属性 <code>data-key</code> 来显示这些符号 <code>&lt;kbd data-key="command"&gt;command&lt;/kbd&gt;</code>
 
-  <p><kbd>Tab</kbd><kbd>q</kbd><kbd>w</kbd><kbd>e</kbd><kbd>r</kbd><kbd>t</kbd><kbd>y</kbd><kbd>u</kbd><kbd>i</kbd><kbd>o</kbd><kbd>p</kbd><kbd>[</kbd><kbd>]</kbd><kbd>\</kbd></p>
+  <p>type.css 中包括以下符号：</p>
 
-  <p><kbd>Caps Lock</kbd><kbd>a</kbd><kbd>s</kbd><kbd>d</kbd><kbd>f</kbd><kbd>g</kbd><kbd>h</kbd><kbd>j</kbd><kbd>k</kbd><kbd>l</kbd><kbd>;</kbd><kbd>'</kbd><kbd>Enter</kbd></p>
+  <ul>
+    <li><kbd data-key="command">command</kbd></li>
+    <li><kbd data-key="shift">shift</kbd></li>
+    <li><kbd data-key="control">control</kbd></li>
+    <li><kbd data-key="option">option</kbd></li>
+    <li><kbd data-key="caps lock">caps lock</kbd></li>
+    <li><kbd data-key="esc">esc(escape)</kbd></li>
+    <li><kbd data-key="return">return(enter)</kbd></li>
+    <li><kbd data-key="delete">delete</kbd></li>
+    <li><kbd data-key="eject">eject</kbd></li>
+  </ul>
 
-  <p><kbd>Shift</kbd><kbd>z</kbd><kbd>x</kbd><kbd>c</kbd><kbd>v</kbd><kbd>b</kbd><kbd>n</kbd><kbd>m</kbd><kbd>,</kbd><kbd>.</kbd><kbd>/</kbd><kbd>Shift</kbd></p>
+  <h4>示例：</h4>
 
+  <p>在 Chrome（Windows） 中可以使用 <kbd>Ctrl</kbd>+<kbd>N</kbd> 打开新窗口，Mac 中使用 <kbd class="dark" data-key="command">Command</kbd>+<kbd class="dark">N</kbd>。</p>
+
+  <h4>一个完整的键盘示例：</h4>
+
+  <style>
+    .keybord-demo {
+      font-size: 26px;
+    }
+
+    .keybord-demo p {
+      margin: auto;
+    }
+
+    .keybord-demo kbd {
+      padding-left: .56em;
+      padding-right: .56em;
+      min-height: 22px;
+    }
+
+    .keybord-demo kbd[data-key="delete"] {
+      padding-left: 21px;
+      padding-right: 21px;
+    }
+
+    .keybord-demo kbd[data-key="tab"] {
+      padding-left: 16px;
+      padding-right: 16px;
+    }
+
+    .keybord-demo kbd[data-key="caps lock"] {
+      padding-left: 30px;
+      padding-right: 30px;
+    }
+
+    .keybord-demo kbd[data-key="enter"] {
+      padding-left: 23px;
+      padding-right: 23px;
+    }
+
+    .keybord-demo kbd[data-key="shift"] {
+      padding-left: 6px;
+      padding-right: 6px;
+    }
+
+    .keybord-demo kbd[data-key="command"] {
+      padding-left: 12px;
+      padding-right: 12px;
+    }
+
+    .keybord-demo kbd[data-key="space"] {
+      padding-left: 92px;
+      padding-right: 92px;
+      vertical-align: middle;
+    }
+
+  </style>
+
+  <div class="keybord-demo dark">
+    <p><kbd>`</kbd><kbd>1</kbd><kbd>2</kbd><kbd>3</kbd><kbd>4</kbd><kbd>5</kbd><kbd>6</kbd><kbd>7</kbd><kbd>8</kbd><kbd>9</kbd><kbd>0</kbd><kbd>-</kbd><kbd>=</kbd><kbd data-key="delete"></kbd></p>
+
+    <p><kbd data-key="tab">Tab</kbd><kbd>q</kbd><kbd>w</kbd><kbd>e</kbd><kbd>r</kbd><kbd>t</kbd><kbd>y</kbd><kbd>u</kbd><kbd>i</kbd><kbd>o</kbd><kbd>p</kbd><kbd>[</kbd><kbd>]</kbd><kbd>\</kbd></p>
+
+    <p><kbd data-key="caps lock"></kbd><kbd>a</kbd><kbd>s</kbd><kbd>d</kbd><kbd>f</kbd><kbd>g</kbd><kbd>h</kbd><kbd>j</kbd><kbd>k</kbd><kbd>l</kbd><kbd>;</kbd><kbd>'</kbd><kbd data-key="enter"></kbd></p>
+
+    <p><kbd data-key="shift">Shift</kbd><kbd>z</kbd><kbd>x</kbd><kbd>c</kbd><kbd>v</kbd><kbd>b</kbd><kbd>n</kbd><kbd>m</kbd><kbd>,</kbd><kbd>.</kbd><kbd>/</kbd><kbd data-key="shift">Shift</kbd></p>
+    <p><kbd>fn</kbd><kbd data-key="control"></kbd><kbd data-key="option"></kbd><kbd data-key="command"></kbd><kbd data-key="space"></kbd><kbd data-key="command"></kbd><kbd data-key="option"></kbd></p>
+  </div>
 
   <h3>其他标签</h3>
   <ul>
@@ -218,3 +304,5 @@ title: Type.css 演示
     <li>&lt;pre&gt;<pre>预格式化标签 preformatted text</pre></li>
   </ul>
 </div>
+</body>
+</html>
