Keybord demo nowrap

--- a/demo/_posts/2013-12-17-type.html
+++ b/demo/_posts/2013-12-17-type.html
@@ -212,6 +212,8 @@ title: Type.css 演示
   <style>
     .keybord-demo {
       font-size: 26px;
+      white-space: nowrap;
+      word-wrap: normal;
     }
 
     .keybord-demo p {
